src/test/ui/feature-gates/feature-gate-pattern_parentheses.rs
fn main() {
    match 0 {
        (pat) => {} //~ ERROR parentheses in patterns are unstable
    }
}
